syntax = "proto3";

package cluster_pb;

option go_package = "github.com/memocash/index/ref/cluster/proto/cluster_pb";

service Cluster {
    rpc Ping (PingReq) returns (PingResp);
    rpc SaveTxs (SaveReq) returns (EmptyResp);
    rpc SaveUtxos (ProcessReq) returns (EmptyResp);
    rpc SaveMeta (ProcessReq) returns (EmptyResp);
}

message PingReq {
    uint64 nonce = 1;
}

message PingResp {
    uint64 nonce = 1;
}

message SaveReq {
    bytes block = 1;
}

message ProcessReq {
    bytes block_hash = 1;
}

message EmptyResp {}
